# thebacknd

./: .gitignore  Cargo.toml  README.md  default.nix  project.yml  pyproject.toml
docs/: CNAME  index.html
docs/static/css/: monospace.css
lib/: thebacknd.py
lib/thebacknd/: __init__.py
machine/: configuration.nix  scripts.nix
machines/base/: configuration.nix  scripts.nix
machines/example/: hello.nix
machines/nginx/: nginx.nix
nix/: sources.json
scripts/: build-toplevel.sh  build-toplevels.sh  clean.sh  deploy.sh  desired-system.sh  destroy-system.sh  format.sh  import-image.sh  thebacknd-run.sh  update-system.sh  upload-image.sh
src/: main.rs
src/lib/thebacknd/agent/: cli.rs  run.rs
src/lib/thebacknd/client/: cli.rs  run.rs
