[package]
name = "thebacknd"
version = "0.1.0"
authors = ["Võ Minh Thu <thu@hypered.io>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Ephemeral virtual machines in the cloud in one command"
repository = "https://github.com/hypered/thebacknd"
readme = "README.md"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.29"
regex = "1.10.4"

[[bin]]
name = "thebacknd"
path = "src/bin/thebacknd.rs"

[[bin]]
name = "thewithn"
path = "src/bin/thewithn.rs"

[lib]
name = "thebacknd"
path = "src/lib/thebacknd/lib.rs"
